--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>    
-    <title>React App</title>
+    <title>React Test</title>
   </head>
   <body>    
-    <div id="root"></div>
-    
+    <div id="root"></div>    
   </body>
 </html>
